--- a/References.bib
+++ b/References.bib
@@ -1,3 +1,17 @@
+@article{bergsten2012effect,
+  title={The effect of geographical scale of sampling on {DNA} barcoding},
+  author={Bergsten, J and Bilton, DT and Fujisawa, T and Elliott, M and Monaghan, MT and Balke, M and Hendrich, L and Geijer, J and Herrmann, J and Foster, GN and Ribera, I and Nilsson, AN and Barraclough, TG and Vogler, AP},
+  journal={Systematic biology},
+  volume={61},
+  number={5},
+  pages={851-869},
+  year={2012},
+  month={10},
+  doi={10.1093/sysbio/sys037}
+}
+
+
+
 @article{carpenter2017stan,
 title = {Stan: {A} Probabilistic Programming Language},
 journal = {Journal of Statistical Software},
@@ -36,12 +50,33 @@ author = {Carpenter, B and Gelman, A and Hoffman, MD and Lee, D and Goodrich, B 
   journal={Journal of Machine Learning Research},
   volume={15},
   pages={1593-1623},
-  year={2014},
-  publisher={}
+  year={2014}
 }
 
+@incollection{jukes1969evolution,
+  title={Evolution of Protein Molecules},
+  author={Jukes, TH. and Cantor, CR.},
+  booktitle={Mammalian Protein Metabolism},
+  editor={Munro, H. N.},
+  publisher={Academic Press},
+  year={1969},
+  address={New York},
+  pages={21-132}
+}
+
+@article{kimura1980simple,
+  title={A simple method for estimating evolutionary rates of base substitutions through comparative studies of nucleotide sequences},
+  author={Kimura, M},
+  journal={Journal of Molecular Evolution},
+  volume={16},
+  number={1},
+  pages={111-120},
+  year={1980}
+}
+
+
 @article{kingman1982coalescent,
-  author = {Kingman, J.F.C.},
+  author = {Kingman, JFC},
   title = {The coalescent},
   journal = {Stochastic Processes and Their Applications},
   year = {1982},
@@ -50,8 +85,8 @@ author = {Carpenter, B and Gelman, A and Hoffman, MD and Lee, D and Goodrich, B 
 }
 
 @article{mather2019practical,
-    author = {Mather, Nicholas and Traves, Suzanne M and Ho, Simon Y W},
-    title = {A practical introduction to sequentially Markovian coalescent methods for estimating demographic history from genomic data},
+    author = {Mather, N and Traves, SM and Ho, SYW},
+    title = {A practical introduction to sequentially {M}arkovian coalescent methods for estimating demographic history from genomic data},
     journal = {Ecology and Evolution},
     year = {2019},
     volume = {10},
@@ -125,7 +160,7 @@ author = {Carpenter, B and Gelman, A and Hoffman, MD and Lee, D and Goodrich, B 
 @inbook{phillips2024measure,
 author = {Phillips, JD and Griswold, CK and Young, RG and Hubert, N and Hanner, H},
 editor = {DeSalle, Robert},
-title = {A Measure of the DNA Barcode Gap for Applied and Basic Research},
+title = {A Measure of the {DNA} Barcode Gap for Applied and Basic Research},
 bookTitle = {DNA Barcoding: Methods and Protocols},
 year = {2024},
 publisher = {Springer US},
@@ -135,7 +170,7 @@ doi = {10.1007/978-1-0716-3581-0_24},
 }
 
 @article{rannala2003bayes,
-  author = {Rannala, Bruce and Yang, Ziheng},
+  author = {Rannala, B and Yang, Z},
   title = {Bayes estimation of species divergence times and ancestral population sizes using DNA sequences from multiple loci},
   journal = {Genetics},
   year = {2003},
@@ -163,8 +198,8 @@ doi = {10.1007/978-1-0716-3581-0_24},
 }
 
 @article{yang2017bayesian,
-  author = {Yang, Ziheng and Rannala, Bruce},
-  title = {Bayesian species identification under the multispecies coalescent provides significant improvements to DNA barcoding analyses},
+  author = {Yang, Z and Rannala, B},
+  title = {Bayesian species identification under the multispecies coalescent provides significant improvements to {DNA} barcoding analyses},
   journal = {Molecular Ecology},
   year = {2017},
   volume = {26},
